# mcp-server-motherduck-recon

./: CHANGELOG-RECON.md  INSTALL-CLAUDE-DESKTOP.md  pyproject.toml
